# ConvertiX

./: Cargo.toml  LICENSE  README.md  config.json
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
src/cli/: args.rs
src/config/: mod.rs  platform.rs
src/converter/: fields.rs  mod.rs  operators.rs  query.rs  validator.rs
src/error/: types.rs
src/output/: formatter.rs
