[package]
name = "convertix"
version = "0.1.0"
edition = "2021"
description = "Cyberspace Asset Mapping Platform Query Statement Conversion Tool"
license = "MIT"
authors = ["EvilChen <24655118+gh0stkey@users.noreply.github.com>"]
repository = "https://github.com/HACK-THE-WORLD/ConvertiX"
keywords = ["cybersecurity", "query", "conversion", "fofa", "quake"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "convertix"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
